--- a/css/Welcome.css
+++ b/css/Welcome.css
@@ -7,7 +7,7 @@
 .header{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(5,0,136,0.5),rgba(5,0,136,0.5)),url("php/images/date.jpg");
+    background-image: linear-gradient(rgba(5,0,136,0.5),rgba(5,0,136,0.5)),url("../php/images/date.jpg");
     background-position: center;
     background-size: cover;
     overflow-x: hidden;
