profile page updated + image folder moved

--- a/css/Template.css
+++ b/css/Template.css
@@ -1,120 +1,140 @@
 *{
-
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
+
 body{
     display: flex;
     align-items: center;
     justify-content: center;
-
-    background: #f7f7f7;
+    background: #fff;
 }
 .wrapper{
     background: #fff;
-
-
-    box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
-    0 32px 64px -48px rgba(0,0,0,0.5);
     overflow: clip;
 }
 .wrapper header{
-    height: 30px;
+    height: 40px;
     margin-bottom: 60px;
     display: flex;
 }
-header .metrics{
-    padding-top: 20px;
-}
-header .metrics button{
+header .button{
+    padding: 20px;
     border: none;
     background: none;
     color: #67676a;
     font-size: 50px;
 }
-header .metrics a{
+header .button a{
     color: inherit;
     text-decoration: none;
 }
-header .metrics a:hover{
+header .button a:hover{
     color: grey;
 }
-header .chat{
-    padding-top: 10px;
+header .logo{
+    margin-top: 20px;
+    margin-left: auto;
+    width: 250px;
+    height: 50px;
+    margin-right: 3.5%;
+    position: relative;
 }
-header .chat button{
+header .logo .hover{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+header .logo:hover .hover{
+    display: inline;
+}
+header .logo img{
+    width: 250px;
+}
+header .notifications{
+    margin-left: auto;
+    padding: 20px;
     border: none;
     background: none;
     color: #67676a;
     font-size: 50px;
 }
-header .chat a{
+header .notifications a{
     color: inherit;
     text-decoration: none;
 }
-header .chat a:hover{
+header .notifications a:hover{
     color: grey;
 }
 header .profilepicture{
-    margin-left: auto;
-}
-header .profilepicture button{
+    padding: 10px;
     border: none;
     background: none;
     color: #67676a;
     font-size: 50px;
-}
-header .profilepicture button:hover{
-
 }
 header .profilepicture img{
     width: 80px;
     border-radius: 50%;
     align-items: center;
+    border: 3px solid #C3C8D3;
+}
+header .profilepicture img:hover{
+    border: 3px solid #666F80;
 }
 .columns{
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding: 30px;
+    background-color: #C3C8D3;
     position: relative;
     display: flex;
 }
 .col1{
     position: relative;
     height: 80vh;
-    flex-basis: 100%;
-    border-radius: 10px;
+    width: 40vw;
+    align-items: center;
+    background-image: linear-gradient(#8F85D1, #7E75B7);
 }
 .picture{
-    margin-top: 50px;
-    margin-left: 160px;
-    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .picture img{
-    width: 140px;
+    width: 20%;
     border-radius: 50%;
     border: 1px solid black;
 }
 .attributes{
-    margin-left: 95px;
-    margin-right: 90px;
+    margin: auto;
     border-radius: 50px;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background: #fff;
+    padding: 5px;
+    gap: 10px;
 }
 .attributes img{
+    width: 15%;
     border-radius: 50%;
     box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
     0 32px 64px -48px rgba(0,0,0,0.5);
 }
 .details{
     margin-top: 20px;
-    padding-left: 150px;
+    margin-left: auto;
+    margin-right: auto;
     width: 65%;
     text-align: center;
     font-size: x-large;
-    color: #FFFFFF;
 }
 .details p{
     margin: 0;
@@ -123,13 +143,16 @@ header .profilepicture img{
 .about{
     border-radius: 5px ;
     margin-top: 20px;
-    margin-left: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    height: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 50%;
     width: 60%;
     overflow-y: auto;
     border: 1px solid black;
+    background-color: #ffffff;
+    text-align: center;
 }
 .about::-webkit-scrollbar{
     width: 0px;
@@ -137,24 +160,28 @@ header .profilepicture img{
 .col2{
     position: relative;
     height: 80vh;
-    flex-basis: 100%;
+    margin-left: 8vw;
+    margin-right: 8vw;
+    border-radius: 10px;
 }
 .bioheader{
     text-align: center;
     font-size: 30px;
-    color: grey;
 }
 .bio{
     border-radius: 5px;
     text-align: center;
+    align-self: center;
     margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    height: 90%;
+    height: 80%;
+    width: 25vw;
     overflow-y: auto;
+    background-color: #ffffff;
     border: 1px solid black;
 }
 .about::-webkit-scrollbar{
@@ -163,12 +190,12 @@ header .profilepicture img{
 .col3{
     position: relative;
     height: 80vh;
-    flex-basis: 100%;
-    border-radius: 10px;
+    width: 35vw;
+    background-image: linear-gradient(#8F85D1, #7E75B7);
 }
 .gallery{
-    flex-basis: 100%;
     align-content: center;
+    width: auto;
     margin-top: 50px;
     margin-bottom: 250px;
 }
@@ -182,4 +209,19 @@ header .profilepicture img{
     border: 1px solid grey;
     box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
     0 32px 64px -48px rgba(0,0,0,0.5);
+}
+.wrapper footer{
+    margin-top: 10px;
+    margin-bottom: 60px;
+}
+footer .logo{
+    margin-top: 50px;
+    width: 90px;
+}
+footer .logo img{
+    height: 80px;
+}
+footer .logo a{
+    color: inherit;
+    text-decoration: none;
 }
