--- a/css/Template.css
+++ b/css/Template.css
@@ -9,7 +9,6 @@
     width: 0px;
 }
 body{
-    display: flex;
     align-items: center;
     justify-content: center;
     background: #fff;
@@ -108,8 +107,12 @@ header .profilepicture img:hover{
     border-radius: 10px;
 }
 .picture{
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    gap: 10px;
 }
 .picture img{
     width: 30%;
