--- a/css/Welcome.css
+++ b/css/Welcome.css
@@ -3,7 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 .header{
     width: 100%;
     height: 100vh;
@@ -25,7 +31,7 @@ nav .logo{
     align-items: center;
     font-size: 50px;
     font-weight: 600;
-    color: white;
+    color: #C3C8D3;
 }
 nav .logo img{
     width: 60px;
@@ -37,26 +43,29 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    text-decoration: none;
-    color: #ffffff;
+    color: #C3C8D3;
     font-weight: 500;
 }
 nav:hover{
-    background: white;
+    background: rgb(34, 30, 63, 0.70);
 }
 nav:hover .logo{
-    color: #333;
+    color: #C3C8D3;
 }
 nav:hover ul li a{
-    color: #333;
+    color: #C3C8D3;
 }
 .content{
-    margin-top: 9%;
     margin-left: 9%;
     color: white;
 }
 .content h1 {
     font-size: 120px;
+    line-height: 100px;
+    font-weight: 600;
+}
+.content h2 {
+    font-size: 50px;
     line-height: 140px;
     font-weight: 600;
 }
@@ -64,6 +73,31 @@ nav:hover ul li a{
     max-width: 500px;
     line-height: 28px;
     opacity: 0;
+}
+
+.successstories{
+    padding-top: 120px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: white;
+}
+
+.about{
+    margin-top: 27%;
+    margin-left: 9%;
+    margin-right: 9%;
+    color: white;
+    padding-bottom: 330px;
+}
+.about h1{
+    font-size: 80px;
+    line-height: 140px;
+    font-weight: 600;
+}
+.about p{
+    font-size: 25px;
+    line-height: 30px
 }
 .links {
     margin-top: 30px;
@@ -80,8 +114,15 @@ nav:hover ul li a{
     border-radius: 30px;
     margin-right: 15px;
 }
+
+.btn:hover{
+    background-color: white;
+    color: #67676a;
+}
+
 .slide-left{
-    animation: slideleft 1s linear forwards;
+    animation: slideleft 1.25s linear forwards;
+
 }
 @keyframes slideleft {
     0%{
@@ -93,26 +134,18 @@ nav:hover ul li a{
         opacity: 1;
     }
 }
-p.slide-left{
-    animation-delay: 1s;
-}
+
 .links.slide-left{
-    animation-delay: 2s;
+    animation-delay: 1.4s;
 }
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-.header{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(5,0,136,0.5),rgba(5,0,136,0.5)),url("../css/images/date.jpg");
-    background-position: center;
-    background-size: cover;
-    overflow-x: hidden;
-}
+
 nav{
     width: 100%;
     display: flex;
@@ -126,7 +159,7 @@ nav .logo{
     align-items: center;
     font-size: 50px;
     font-weight: 600;
-    color: white;
+    color: #C3C8D3;
 }
 nav .logo img{
     width: 60px;
@@ -142,15 +175,7 @@ nav ul li a{
     color: #ffffff;
     font-weight: 500;
 }
-nav:hover{
-    background: white;
-}
-nav:hover .logo{
-    color: #333;
-}
-nav:hover ul li a{
-    color: #333;
-}
+
 .content{
     margin-top: 9%;
     margin-left: 9%;
@@ -175,15 +200,6 @@ nav:hover ul li a{
     text-decoration: none;
     display: inline-block;
 }
-.btn{
-    border: 2px solid white;
-    padding: 10px 35px;
-    border-radius: 30px;
-    margin-right: 15px;
-}
-.slide-left{
-    animation: slideleft 1s linear forwards;
-}
 @keyframes slideleft {
     0%{
         transform: translate(100px);
@@ -194,9 +210,18 @@ nav:hover ul li a{
         opacity: 1;
     }
 }
-p.slide-left{
-    animation-delay: 1s;
+
+.footer{
+    height: 110px;
+    width: 100%;
+    background-color: rgb(34, 30, 63, 0.70);
+    color: #67676a;
 }
-.links.slide-left{
-    animation-delay: 2s;
+.footer p{
+    text-align: center;
+}
+.footer img{
+    height: 80px;
+    margin-left: 9px;
+    margin-right: 9px;
 }
