Style Sheet Update - In Line With Site
In Line With Host Website As Of 03/04/22

--- a/css/FindTemplate.css
+++ b/css/FindTemplate.css
@@ -40,10 +40,9 @@ header .button a:hover{
 }
 header .logo{
     margin-top: 20px;
-    margin-left: auto;
+    margin-left: 29.5%;
     width: 250px;
     height: 50px;
-    margin-right: 3.5%;
     position: relative;
 }
 header .logo .hover{
@@ -59,8 +58,56 @@ header .logo:hover .hover{
 header .logo img{
     width: 250px;
 }
-header .notifications{
+header .search{
     margin-left: auto;
+    margin-top: 50px;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: space-between;
+}
+header .search .text{
+    font-size: 18px;
+}
+header .search input{
+    position: absolute;
+    height: 42px;
+    width: calc(100% - 50px);
+    font-size: 16px;
+    padding: 0 13px;
+    border: 1px solid #e6e6e6;
+    outline: none;
+    border-radius: 5px 0 0 5px;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.2s ease;
+}
+header .search input.show{
+    opacity: 1;
+    pointer-events: auto;
+}
+header .search button{
+    position: relative;
+    z-index: 1;
+    width: 47px;
+    height: 42px;
+    font-size: 17px;
+    cursor: pointer;
+    border: none;
+    background: #fff;
+    color: #333;
+    outline: none;
+    border-radius: 0 5px 5px 0;
+    transition: all 0.2s ease;
+}
+header .search button.active{
+    background: #333;
+    color: #fff;
+}
+.search button.active i::before{
+    content: '\f00d';
+}
+header .notifications{
     padding: 20px;
     border: none;
     background: none;
