--- a/css/FindTemplate.css
+++ b/css/FindTemplate.css
@@ -59,6 +59,57 @@ header .logo:hover .hover{
 header .logo img{
     width: 250px;
 }
+/* The Modal (background) */
+.modal {
+    opacity: 0;
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    margin-top: 120px; /* Location of the box */
+    right: 10px;
+    left: auto;
+    top: 0;
+    width: fit-content; /* Full width */
+    height: fit-content; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+}
+.modal.show{
+    opacity: 1;
+}
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: fit-content; /* Could be more or less, depending on screen size */
+    height: 500px;
+    overflow: scroll; /* Enable scroll if needed */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+#checkboxes p{
+    /* width: 7em; */
+    text-align: left;
+}
+
+#checkboxes label {
+    display: block;
+    clear: left
+}
 header .search{
     margin-left: auto;
     margin-top: 50px;
