--- a/css/Template.css
+++ b/css/Template.css
@@ -112,10 +112,11 @@ header .profilepicture img:hover{
     border-radius: 50%;
     border: 5px #67676a;
     object-fit: cover;
-    height: 135px;
-    width: 135px;
+    height: 140px;
+    width: 140px;
 }
 .topdetails{
+    padding: 10px;
     line-height: 25px;
     display: block;
     text-align: center;
@@ -134,10 +135,26 @@ header .profilepicture img:hover{
     border-radius: 25px;
     color: #112A46;
 }
+.textpill {
+    align-content: center;
+    font-weight: bold; /* Making font bold */
+    border: 2px solid white;
+    border-radius: 20px; /* Making border radius */
+    width: fit-content;
+    height: auto;
+    padding: 5px 30px 5px 30px; /* Making space around letters */
+    margin-bottom: 5px;
+    font-size: 18px;
+    background-color: whitesmoke;
+}
+
+.Characteristics{
+    display: grid;
+    width: 33.33%;
+}
 
 .About h2{
     text-align: center;
-    padding-top: 10px;
     color: #112A46;
 }
 .About p{
@@ -165,14 +182,16 @@ header .profilepicture img:hover{
     gap: 5px;
 }
 .Characteristics p{
+
     align-content: center;
     font-weight: bold; /* Making font bold */
     border: 2px solid white;
     border-radius: 20px; /* Making border radius */
     width: fit-content;
-    height: auto;
+    height: fit-content;
     padding: 5px 30px 5px 30px; /* Making space around letters */
     margin-bottom: 5px;
+    margin-right: 5px;
     font-size: 18px;
     background-color: whitesmoke;
 }
@@ -192,8 +211,11 @@ header .profilepicture img:hover{
     float: left;
     text-align: center;
     width: 33.33%;
-    padding: 10px;
     height: 500px; /* Should be removed. Only for demonstration */
+}
+
+.column h2{
+    padding: 10px;
 }
 
 /* Clear floats after the columns */
@@ -201,6 +223,97 @@ header .profilepicture img:hover{
     content: "";
     display: table;
     clear: both;
+}
+
+/* slideshow */
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+/* Slideshow container */
+/* Next & previous buttons */
+.prev{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: 5%;
+    margin-left: -15%;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: 5%;
+    margin-right: 2%;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .prev, .next,.text {font-size: 11px}
 }
 /*
 .columns{
