--- a/css/Template.css
+++ b/css/Template.css
@@ -23,6 +23,8 @@ body{
     margin-bottom: 60px;
     display: flex;
     width: 100vw;
+    align-content: center;
+    justify-content: center;
 }
 header .button{
     padding: 20px;
@@ -40,11 +42,9 @@ header .button a:hover{
 }
 header .logo{
     margin-top: 20px;
-    margin-left: auto;
     width: 250px;
     height: 50px;
-    margin-right: 3.5%;
-    position: relative;
+    position: absolute;
 }
 header .logo .hover{
     display: none;
@@ -315,6 +315,8 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
     .prev, .next,.text {font-size: 11px}
 }
+
+
 /*
 .columns{
     margin-left: 5vw;
