--- a/css/FindTemplate.css
+++ b/css/FindTemplate.css
@@ -318,18 +318,21 @@ header .profilepicture img:hover{
     0 32px 64px -48px rgba(0,0,0,0.5);
 }
 .wrapper footer{
-    margin-top: 10px;
-    margin-bottom: 60px;
-    width: 100vw;
+    display: flex;
+    margin: 0px;
+    width: 100%;
 }
 footer .logo{
-    margin-top: 50px;
     width: 90px;
 }
 footer .logo img{
     height: 80px;
 }
+footer .p{
+    text-align: center;
+}
 footer .logo a{
     color: inherit;
     text-decoration: none;
 }
+
