--- a/css/Metrics.css
+++ b/css/Metrics.css
@@ -109,12 +109,10 @@ header .profilepicture img:hover{
 }
 
 .wrapper footer{
-    margin-top: 10px;
-    margin-bottom: 60px;
+    margin: 10px;
     width: 100vw;
 }
 footer .logo{
-    margin-top: 50px;
     width: 90px;
 }
 footer .logo img{
@@ -124,3 +122,4 @@ footer .logo a{
     color: inherit;
     text-decoration: none;
 }
+
